--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "date-fns": "^4.1.0",
     "next": "15.3.2",
+    "next-auth": "^4.24.11",
     "next-intl": "^4.1.0",
     "react": "^19.0.0",
     "react-datepicker": "^8.4.0",
@@ -20,7 +21,8 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
